# it-tools

./: README.md  pyproject.toml  requirements-dev.txt  upgrade_db.py
.github/workflows/: ci.yml
it_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
it_tools/adops/: cli.py  gui_adops.py
it_tools/autoarchiver/: cli.py
it_tools/mailops/: cli.py
it_tools/patchpulse/: cli.py
it_tools/tonertrack/: __main__.py  cli.py  gui.py  gui_updated.py  snmp_utils.py
tests/: test_smoke.py
